<resources>
    <string name="app_name">Heroes Challenge</string>
    <string name="choose_hero">Choose Hero</string>
    <string name="create_hero">Create Hero</string>
    <string name="high_score">High Score</string>
    <string name="hero_name">Hero name:</string>
    <string name="attack">Attack:</string>
    <string name="hit_points">Hit Points</string>
    <string name="unspent_points">Unspent points:</string>
    <string name="empty_string" />
    <string name="upgrade">UPGRADE</string>
    <string name="fight_enemy">FIGHT ENEMY</string>
    <string name="dungeon_run">DUNGEON RUN</string>
    <string name="name">Name</string>
    <string name="confirm">CONFIRM</string>
    <string name="plus">+</string>
    <string name="points">Points</string>
    <string name="choose_enemy">Choose Enemy</string>
    <string name="buy_item">Buy item</string>
    <string name="choose_talent">Choose talent</string>
    <string name="boots">boots</string>
    <string name="chest">chest</string>
    <string name="legs">legs</string>
    <string name="hands">hands</string>
    <string name="shoulders">shoulders</string>
    <string name="helmets">helmets</string>;
</resources>
