<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeroActivity">


    <TableLayout android:layout_height="match_parent" android:layout_width="match_parent">
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="130dp"
                android:text="@string/name"
                android:id="@+id/nameTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:text="@string/empty_string"
                android:id="@+id/heroNameTextView"/>
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="130dp"
                android:text="@string/attack"
                android:id="@+id/attackTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:text="@string/empty_string"
                android:id="@+id/heroAttackTextView"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="130dp"
                android:text="@string/hit_points"
                android:id="@+id/hitPointsTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/empty_string"
                android:id="@+id/heroHitPointsTextView"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="130dp"
                android:text="@string/unspent_points"
                android:id="@+id/unspentPointsTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/empty_string"
                android:id="@+id/heroUnspentPointsTextView"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
        <Button
            android:id="@+id/upgradeButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/upgrade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <Button
                android:id="@+id/fightEnemyButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_enemy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <Button
                android:id="@+id/dungeonRunButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/dungeon_run"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                 />
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <Button
                android:id="@+id/buyItemButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/buy_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <Button
                android:id="@+id/chooseTalentButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_talent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>