<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpgradeActivity">


    <TableLayout android:layout_height="match_parent" android:layout_width="match_parent">
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="130dp"
                android:text="@string/unspent_points"
                android:id="@+id/unspentPointsTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/empty_string"
                android:id="@+id/heroUnspentPointsTextView"/>
        </TableRow>


        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="130dp"
                android:text="@string/attack"
                android:id="@+id/attackTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="30dp"
                android:text="@string/empty_string"
                android:id="@+id/heroAttackTextView"/>
            <Button
                android:id="@+id/addAttackButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="130dp"
                android:text="Hit Points:"
                android:id="@+id/hitPointsTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="30dp"
                android:text="@string/empty_string"
                android:id="@+id/heroHitPointsTextView"/>
            <Button
                android:id="@+id/addHitPointsButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </TableRow>


        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <Button
                android:id="@+id/comfirmButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>