<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeroActivity">


    <TableLayout android:layout_height="match_parent" android:layout_width="match_parent">
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:text="@string/empty_string"
                android:id="@+id/heroNameTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:text="@string/empty_string"
                android:id="@+id/villainNameTextView"/>

        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:text="@string/empty_string"
                android:id="@+id/heroAttackTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:text="@string/empty_string"
                android:id="@+id/villainAttackTextView"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/empty_string"
                android:id="@+id/heroHitPointsTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/empty_string"
                android:id="@+id/villainHitPointsTextView"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="130dp"
                android:text="@string/unspent_points"
                android:id="@+id/unspentPointsTextView"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/empty_string"
                android:id="@+id/heroUnspentPointsTextView"/>
        </TableRow>

        <Button
            android:id="@+id/attackButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/attack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>